force-app/main/default/objects/LEXMAGICMOVER__NAMNoteConverted__c/LEXMAGICMOVER__NAMNoteConverted__c.object-meta.xml
<CustomObject>
    <label>NAMNoteConverted</label>
    <nameField>
        <displayFormat>NC-{0000000}</displayFormat>
        <label>NAMNoteConverted Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NAMNotesConverted</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>