force-app/main/default/objects/LEXMAGICMOVER__NAMNoteConverted__c/fields/LEXMAGICMOVER__LegacyNoteConvertedDate__c.field-meta.xml
<CustomField>
    <fullName>LEXMAGICMOVER__LegacyNoteConvertedDate__c</fullName>
    <label>LegacyNoteConvertedDate</label>
    <type>Date</type>
</CustomField>