force-app/main/default/objects/LEXMAGICMOVER__NAMNoteConverted__c/listViews/LEXMAGICMOVER__All.listView-meta.xml
<ListView>
    <fullName>LEXMAGICMOVER__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>